# daily-priority

./: Cargo.toml  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tauri.conf.json  tsconfig.json  vite.config.ts
capabilities/: default.json
migrations/: 0001_create_tasks.sql  0002_priority_scale_1_to_5.sql
src/: App.vue  lib.rs  main.rs  main.ts  style.css
src-tauri/: tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src/components/: DoneList.vue  PriorityMeter.vue  SettingsPanel.vue  SortModeToggle.vue  Summary.vue  TaskCard.vue  TaskForm.vue  TaskList.vue  ThemeToggle.vue  TimerControl.vue
src/components/ui/badge/: Badge.vue
src/components/ui/button/: Button.vue
src/components/ui/card/: Card.vue
src/components/ui/dialog/: Dialog.vue
src/components/ui/input/: Input.vue
src/components/ui/label/: Label.vue
src/components/ui/switch/: Switch.vue
src/components/ui/textarea/: Textarea.vue
src/lib/: db.ts  persian.ts  timer-alert.ts  utils.ts
src/stores/: settings.ts  tasks.ts  theme.ts
src/types/: task.ts
