[package]
name = "daily-priority"
version = "1.0.0"
description = "اولویت روزانه — مدیریت کارهای روزانه با اولویت‌بندی و تایمر"
authors = ["you"]
edition = "2021"

# See https://v2.tauri.app/develop/configuration-files/ for more info.

[lib]
name = "daily_priority_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "daily-priority"
path = "src/main.rs"
